# cursovaya3

./: README.md  main.py  pyproject.toml  settings.py  utils.py  utils2.py
tests/: example.py  test_settings.py  test_utils.py
